crates/haneul-protocol-config/src/snapshots/haneul_protocol_config__test__version_1.snap
---
source: crates/haneul-protocol-config/src/lib.rs
expression: "ProtocolConfig::get_for_version(cur)"
---
version: 1
feature_flags:
  package_upgrades: false
max_tx_size: 65536
max_tx_in_batch: 10
max_gas_payment_objects: 32
max_modules_in_publish: 128
max_arguments: 512
max_type_arguments: 16
max_type_argument_depth: 16
max_pure_argument_size: 16384
max_object_vec_argument_size: 128
max_coins: 1024
max_pay_recipients: 1024
max_programmable_tx_commands: 1024
move_binary_format_version: 6
max_move_object_size: 256000
max_move_package_size: 102400
max_tx_gas: 1000000000
max_loop_depth: 5
max_generic_instantiation_length: 32
max_function_parameters: 128
max_basic_blocks: 1024
max_value_stack_size: 1024
max_type_nodes: 256
max_push_size: 10000
max_struct_definitions: 200
max_function_definitions: 1000
max_fields_in_struct: 32
max_dependency_depth: 100
max_num_event_emit: 256
max_num_new_move_object_ids: 2048
max_num_new_move_object_ids_system_tx: 32768
max_num_deleted_move_object_ids: 2048
max_num_deleted_move_object_ids_system_tx: 32768
max_num_transfered_move_object_ids: 2048
max_num_transfered_move_object_ids_system_tx: 32768
max_event_emit_size: 256000
max_move_vector_len: 262144
object_runtime_max_num_cached_objects: 1000
object_runtime_max_num_cached_objects_system_tx: 16000
object_runtime_max_num_store_entries: 1000
object_runtime_max_num_store_entries_system_tx: 16000
base_tx_cost_fixed: 110000
package_publish_cost_fixed: 1000
base_tx_cost_per_byte: 0
package_publish_cost_per_byte: 80
obj_access_cost_read_per_byte: 15
obj_access_cost_mutate_per_byte: 40
obj_access_cost_delete_per_byte: 40
obj_access_cost_verify_per_byte: 200
obj_data_cost_refundable: 100
obj_metadata_cost_non_refundable: 50
storage_rebate_rate: 9900
storage_fund_reinvest_rate: 500
reward_slashing_rate: 5000
storage_gas_price: 1
max_transactions_per_checkpoint: 1000
max_checkpoint_size: 31457280
buffer_stake_for_protocol_upgrade_bps: 7500
copy_bytes_to_address_cost_per_byte: 10
address_to_vec_cost_per_byte: 10
address_vec_reverse_cost_per_byte: 10
copy_convert_to_u256_cost_per_byte: 10
u256_to_bytes_to_vec_cost_per_byte: 10
u256_bytes_vec_reverse_cost_per_byte: 10
copy_convert_to_address_cost_per_byte: 10
event_value_size_derivation_cost_per_byte: 1000
event_tag_size_derivation_cost_per_byte: 1000
event_emit_cost_per_byte: 1000

